fix(habiTv): resolve jfxrt.jar for JDK 8 GUI launch (#56)
* fix(habiTv): resolve jfxrt.jar for JDK 8 GUI launch

HabitvLauncher no longer assumes java.home/lib/jfxrt.jar only. Probe
common JDK layouts, allow -Dhabitv.jfxrt.path, and fail fast in GUI mode
with a clear path list when JavaFX is missing.

Co-authored-by: Cursor <cursoragent@cursor.com>

* fix(habitv): address jfxrt locator review feedback

Agent-Logs-Url: https://github.com/Mika3578/habitv/sessions/c617dbfe-4b75-4d62-8b88-7ba34081c82f

Co-authored-by: Mika3578 <58137747+Mika3578@users.noreply.github.com>

---------

Co-authored-by: Cursor <cursoragent@cursor.com>
Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>